--- a/express-project/views/partials/nav.ejs
+++ b/express-project/views/partials/nav.ejs
@@ -1,7 +1,7 @@
 <nav>
     <div class="site-title">
-      <a href="/"><h1>Blog Ninja</h1></a>
-      <p>A Net Ninja Site</p>
+      <a href="/"><h1>Blog Node and Express</h1></a>
+      <p>Node Blog Site</p>
     </div>
     <ul>
       <li><a href="/">Blogs</a></li>
